--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul id="products-list">
-       <button type="button">Add to card</button>
+       <!-- <button type="button">Add to card</button> -->
     </ul>
     <script src="db-var.js" type="module"></script>
     <script src="index.js" type="module"></script>
